package br.com.caio.padroes.comportamentais.command;

public interface Command {
    void execute();
}