package br.com.caio.padroes.comportamentais.command;

public class Receiver {

    public void action() {
        System.out.println("Receiver: executando ação principal.");
    }
}